atualizando método de fila